<resources>
    <string name="app_name">Twsila</string>

    <!-- ... -->
    <string name="facebook_application_id" translatable="false">1935913193321341</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb1935913193321341</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="spinner_title">Joined users</string>

    <string name="car"> Erkab M3ana </string>
    <string name="Playing"> Sa3et Kora </string>
    <string name="specialist"> Specialist </string>
    <string name="disaster"> Offers </string>
    <string name="rent"> Egarat </string>
    <string name="advertisement"> A3lanat </string>
    <string name="usersToSharePost">number of users to share !</string>
    <string name="send_button_label">Send</string>

    <string-array name="categories_toPostIn">
        <item>Erkab M3ana</item>
        <item>Sa3et Kora</item>
        <item>Specialist</item>
        <item>Offers</item>
        <item>Egarat</item>
        <item>A3lanat</item>
        <item>All</item>
    </string-array>

</resources>
